<resources>
    <string name="app_name">Manger à Montréal</string>
    <string name="app_details_title">Détails</string>
    <string name="service_error_http_error">Impossible de récupérer les emplacements.</string>
    <string name="service_error_no_connection">Pas de connexion au réseau.</string>
    <string name="service_error_unknown_error">Erreur inconnue.</string>
    <string name="service_error_not_found">Emplacement inconnu.</string>
    <string name="place_not_found">Détails de l\'emplacement introuvable.</string>
    <string name="activity_details_hours">Horaires d\'ouverture</string>
    <string name="activity_details_price">Prix</string>
    <string name="activity_details_rating">Note</string>
    <string name="activity_details_goto">S\'y rendre</string>
    <string name="activity_details_photo_description">Photo des lieux</string>
</resources>
