<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin">

    <ProgressBar
        android:id="@+id/place_details_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <ScrollView
        android:id="@+id/place_details_content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/place_details_goto"
        android:layout_marginBottom="15dp"
        android:visibility="gone"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/place_details_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/activity_details_na"
                tools:text="Name"/>

            <TextView
                android:id="@+id/place_details_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/activity_details_na"
                tools:text="French restaurant"/>

            <TextView
                android:id="@+id/place_details_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:drawableLeft="@drawable/ic_room_black_24dp"
                android:drawableStart="@drawable/ic_room_black_24dp"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="@string/activity_details_na"
                tools:text="Location"/>

            <TextView
                android:id="@+id/place_details_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                tools:text="Description description description description"/>

            <TextView
                android:id="@+id/place_details_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/activity_details_na"
                android:autoLink="web"
                tools:text="http://www.google.fr"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginBottom="5dp"
                android:text="@string/activity_details_hours"/>

            <TextView
                android:id="@+id/place_details_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/activity_details_na"
                tools:text="Currently open"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginBottom="5dp"
                android:text="@string/activity_details_price"/>

            <TextView
                android:id="@+id/place_details_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/activity_details_na"
                tools:text="10$ - 20$"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginBottom="5dp"
                android:text="@string/activity_details_rating"/>

            <TextView
                android:id="@+id/place_details_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/activity_details_na"
                tools:text="* * *"/>

            <ImageView
                android:id="@+id/place_details_photo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/activity_details_photo_description"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/place_details_goto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/activity_details_goto"
        android:visibility="gone"
        tools:visibility="visible" />

</RelativeLayout>